[package]
name = "blvm-zmq"
version = "0.1.6"
edition = "2021"
authors = ["Bitcoin Commons Team"]
description = "ZeroMQ PUB notifications module for blvm-node (hashblock, hashtx, rawblock, rawtx, sequence)"
license = "MIT"
repository = "https://github.com/BTCDecoded/blvm-zmq"
homepage = "https://btcdecoded.org"
keywords = ["bitcoin", "zmq", "zeromq", "module"]
categories = ["cryptography::cryptocurrencies"]

[[bin]]
name = "blvm-zmq"
path = "src/main.rs"

[lib]
name = "blvm_zmq"
path = "src/lib.rs"

[dependencies]
# `sled` is required for `blvm_sdk::module::database::open_module_db` (dynamic open_tree).
# crates.io blvm-sdk 0.1.5's `node` feature does not enable `blvm-node/sled`; keep this explicit
# so release binaries stay compatible with default RocksDB nodes.
blvm-node = { version = ">=0.1, <1", features = ["sled"] }
blvm-sdk = { version = ">=0.1, <1", default-features = false, features = ["node"] }
blvm-sdk-macros = { version = ">=0.1, <1" }
blvm-protocol = { version = ">=0.1, <1" }

tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "=0.8.2"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

zeromq = { package = "zmq", version = "=0.10" }
